<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFB"
    tools:context=".AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="60dp"
        android:padding="12dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                style="@style/TextViewTitle"
                android:layout_marginBottom="15dp"
                android:text="@string/about_us"
                android:layout_height="wrap_content"/>

            <include
                layout="@layout/horizantal_line"/>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/about_project"
                        style="@style/TextViewSubtitle"
                        android:layout_marginBottom="15dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="match_parent"
                        style="@style/TextViewBody"
                        android:text="@string/about_project_text"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/about_benefits_we_provide_to_users"
                        style="@style/TextViewSubtitle"
                        android:layout_marginBottom="15dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="match_parent"
                        style="@style/TextViewBody"
                        android:text="@string/about_benefits_we_provide_to_users_text"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>







        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/nav_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>